Mayhaps fix modal on Safari

--- a/web/app/themes/pops/assets/styles/layouts/_home.scss
+++ b/web/app/themes/pops/assets/styles/layouts/_home.scss
@@ -22,12 +22,20 @@ main.home {
     text-align: center;
   }
   .modal {
-    overflow: visible !important;
+    text-align: center;
+    padding: 0 !important;
+  }
+  .modal:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -4px;
   }
   .modal-dialog {
-    width: auto;
+    width: 95%;
     @extend .content-container;
-    top: 50% !important;
-    transform: translateY(-50%) !important;
+    display: inline-block;
+    vertical-align: middle;
   }
 }
